--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ ksp = "1.9.10-1.0.13"
 antlr4 = "4.13.1"
 androidx-work = "2.8.1"
 retrofit = "2.9.0"
-room = "2.5.2"
+room = "2.6.0-beta01"
 
 
 [libraries]
